...
          },
          child: widget.child,
        ),
        bottomNavigationBar: isGoalIconPicker
            ? null
            : NavigationBar(
                key: const Key('main-bottom-navigation'),
                selectedIndex: selectedIndex,
                onDestinationSelected: (index) {
                  switch (index) {
                    case 0:
                      context.go(RoutePaths.home);
                      return;
...
